@@ -660,6 +660,9 @@ Release 0.22.0 - Unreleased
 
     HDFS-1781. Fix the path for jsvc in bin/hdfs.  (John George via szetszwo)
 
+    HDFS-1845. Symlink comes up as directory after namenode restart.
+    (John George via eli)
+
 Release 0.21.1 - Unreleased
 
     HDFS-1411. Correct backup node startup command in hdfs user guide.
